@@ -1,3 +1,8 @@
+2001-01-15  Bruno Haible  <haible@clisp.cons.org>
+
+	* dcigettext.c (_nl_find_msg): Cast the second iconv() arg, to avoid
+	a warning.
+
 2001-01-07  Bruno Haible  <haible@clisp.cons.org>
 
 	* gettextP.h (__gettextdebug): Remove declaration.
